# DatabaseMCP

./: .dockerignore  .env  .env-orig  client_ollama.py  config.py  db.py  discovery_resources.py  discovery_tools.py  docker-compose.yml  main.py  mcp-server.Dockerfile  pyproject.toml  run_instructions.txt
schemas/: VEGAYAN_BRAS.schema  schema_loader.py
